# algosvc-mlops

./: .env  .gitignore  K8S-TESTING.md  README.md  TESTING.md  docker-compose.yml
.github/workflows/: ci-cd.yml
docker/: Dockerfile.cpu
java/: pom.xml
java/src/main/java/com/acme/: AlgoService.java  NativeKernels.java
k8s/: deployment.yaml  job-configmap.yaml  job-test.yaml
logs/: README.md
native/: CMakeLists.txt  kernels.cpp
nginx/: nginx.conf
rundata/input/: .gitkeep  sample.json  test1.json  test2.json
rundata/output/: .gitkeep
scripts/: build-and-run.sh  compose-up.sh  compose.sh  k8s-quick-test.sh  k8s-test.sh  test-batch-job.sh  test-endpoints.sh
